create docs auth
